OpenJMLTest/test/visibilitySimple/expected
test/visibilitySimple/B.jml:7: error: cannot find symbol
     requires this.ii >= 0;
                  ^
  symbol: variable ii
test/visibilitySimple/B.jml:9: error: cannot find symbol
     requires this.ii >= 0;
                  ^
  symbol: variable ii
2 errors
